[project]
name = "abides-jpmc-public"
version = "0.1.0"
description = "ABIDES: Agent-Based Interactive Discrete Event Simulation environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coloredlogs>=15.0.1",
    "gymnasium>=0.29.0",
    "matplotlib>=3.5.0",
    "numpy>=1.22.0,<2.0.0",
    "pandas>=1.2.4",
    "psutil>=5.8.0",
    "scipy>=1.10.0",
    "tqdm>=4.61.1",
    "ray[rllib]>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "p-tqdm>=1.3.3",
    "pre-commit>=2.13",
    "pytest>=7.0.0",
    "pytest-cov>=2.12.1",
    "sphinx>=3.5.4",
    "sphinx-autodoc-typehints>=1.12.0",
    "sphinx-book-theme>=0.0.42",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abides-core/abides_core", "abides-markets/abides_markets", "abides-gym/abides_gym"]

[tool.pytest.ini_options]
testpaths = ["abides-core/tests", "abides-markets/tests"]
python_files = "test_*.py"
